<resources>
    <string name="app_name">Climber</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register now!</string>
    <string name="new_user">New user?</string>
    <string name="register_email">Enter your email.\n It will be used as account login username</string>
    <string name="register_password">Create your password.\n
        Make sure it contains:\n
        1.One upper letter\n
        2.One special sign\n
        3.8-20 characters.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="photo">Click on the camera\n
    and choose your profile picture!</string>
    <string name="style">Choose your climbing styles.</string>
    <string name="description">Tell us something about yourself!</string>
    <string name="finish">Congratulation!\n Your account has been created\n It is time to log in and start using the application</string>
    <string name="find">Find climbers</string>
    <string name="contacts">Contacts</string>
</resources>